[package]
name = "llm-cost-cap"
version = "0.1.0"
edition = "2021"
description = "Pre-flight USD cost gate for LLM calls"
license = "MIT"
repository = "https://github.com/MukundaKatta/llm-cost-cap-rs"
keywords = ["llm", "cost", "budget", "anthropic", "openai"]
categories = ["api-bindings"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
